--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-
+<!-- test -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>Big store a Ecommerce Online Shopping Category Flat </title>
